# osquery-rs

./: Cargo.toml  README.md
osquery/: Cargo.toml  Makefile
osquery-thrift/: Cargo.toml
osquery-thrift/src/: lib.rs
osquery/examples/: tester.rs
osquery/src/: lib.rs  util.rs
vestigial/: Cargo.toml
vestigial/src/: lib.rs
