[package]
name = "osquery-thrift"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
crossbeam = "*"

[dependencies]
anyhow = "*"
derive_more = "*"
log = "*"
maplit = "*"
paste = "1.0"
pretty_env_logger = "*"
serde = { version = "*", features=["derive"]}
serde_json = "*"
serde_with = { version = "*", features=["json"]}
strum = { version = "*", features=["derive"]}
thiserror = "*"
thrift = "0.13"